# 0n35h07

./: .editorconfig  .env  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  README.md  SECURITY.md  STEAM_INTEGRATION_ISSUE.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  piska.json  playwright.config.ts  trailer-build.txt  trailer.html  tsconfig.electron.json  tsconfig.test.json  vite-plugin-camera-poses.ts  vite-plugin-editor-maps.ts  vite.config.ts  vite.trailer.config.ts  vitest.config.ts
.claude/plans/: refactoring-plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml  steam-deploy.yml
design/icon-concepts/: final-preview.html  preview.html  round2.html
dist-electron/: main.js  preload.js
electron/: main.ts  preload.ts
public/demos/: os_arena.demo.json  os_india.demo.json  os_pillars.demo.json
public/radio/: drums.json  instruments.json  moods.json  progressions.json  scales.json
scripts/: analyzeDemo.mjs  analyzeDodges.mjs  build-steam.mjs  ensure-native.mjs  inspectFrames.mjs  upload-steam.mjs
src/: App.tsx  Arena.tsx  Bot.tsx  Game.tsx  bvh.ts  constants.ts  debug-globals.d.ts  gameFeel.ts  index.css  main.tsx  names.ts  platform.ts  postFxStore.ts  settings.ts  storage.ts  types.ts  useGameInput.ts  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  build.rs  steam_appid.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  steam.rs  steam_net.rs
src/components/: AudioBar.tsx  BallPreview.tsx  Beam3D.tsx  BeamEntity.tsx  ControlsLegend.tsx  CountdownOverlay.tsx  Crosshair.tsx  DashIndicator.tsx  EdgeOutline.tsx  EffectText.tsx  EpilepsyWarning.tsx  FavoritesColumn.tsx  GameOverlay.tsx  HelpOverlay.tsx  InviteModal.css  InviteModal.tsx  KillFeed.tsx  LobbyBackdrop.tsx  MapBackground.tsx  MapPreview.tsx  MapVisualBits.tsx  MatchEndedOverlay.tsx  MatchHud.tsx  MatchSettings.tsx  MenuBackdrop.tsx  MenuEdgeGlow.tsx  NetStatusChip.tsx  OverheatVignette.tsx  PauseMenu.tsx  PlayerEntity.tsx  RadioCodePanel.tsx  RadioExplorer.css  RadioExplorer.tsx  RadioMiniPlayer.tsx  RadioPlayer.tsx  RadioPlayerBar.tsx  RadioTrash.tsx  RadioVisualizer.tsx  RapierBridge.tsx  ReadyOverlay.tsx  (+19 more)
src/diag/: constants.ts  gameLog.ts  logFormat.ts  logRetention.ts  logSink.ts  steamDiagBridge.ts
src/editor/: EditorRoot.tsx  EditorScene.tsx  MapEditor.tsx  MapPicker.tsx  editor.css  editorSelection.ts  editorStore.ts  mapsApi.ts  useMapSaver.tsx
src/game/: BeamWeapon.ts  Body.ts  LagCompHistory.ts  Match.ts  Player.ts  Shield.ts  TickDriver.ts  World.ts  abstractions.ts  ballArt.ts  blockGeometry.ts  blockGrid.ts  botAppearance.ts  grid.ts  mapGeometryCache.ts  maps.ts  modes.ts  overheat.ts  spawns.ts  streak.ts  streakConfig.ts  wedge.ts
src/hooks/: useBeamWeapon.ts  useBotController.ts  useCameraEffects.ts  useDampedTranslateX.ts  useDelayedUnmount.ts  useFlash.ts  useGameHUD.ts  useGameInput.ts  usePayloadFlash.ts  usePlayerMovement.ts  useRelayStatus.ts  useShieldSystem.ts
src/i18n/: dict.ts  index.ts
src/maps/: os_india.json
src/net/: BroadcastChannelNet.ts  DualMatchmaker.ts  INet.ts  InterpBuffer.ts  (+17 more)
tests/: BASE.md  MOVEMENT.md  SHIELD.md  SHOOTING.md  appearance.spec.ts  base.spec.ts  charging.spec.ts  collision.spec.ts  comeback.spec.ts  dash.spec.ts  fixtures.ts  helpers.ts  killstreak.spec.ts  lobby-modes.spec.ts  lobby-tabs.spec.ts  lobby.spec.ts  maps.spec.ts  mesh-smoothness.spec.ts  mesh.spec.ts  movement.spec.ts  multiplayer.spec.ts  music.spec.ts  play-menu.spec.ts  predict-replay.spec.ts  room.spec.ts  scoreboard.spec.ts  settings.spec.ts  sfx.spec.ts  shield.spec.ts  shooting.spec.ts
trailer-dist/: index.html
(+454 files in other folders)
